--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
   --orangeBg: #ffedd5;
   --blue: #1d4ed8;
   --blueBg: #dbeafe;
+  --light-pink: #e9d5ff;
   --gradient: linear-gradient(
     90deg,
     rgba(17, 24, 39, 1) 0%,
@@ -32,4 +33,6 @@ body {
   background: var(--milk);
   color: var(--black);
   font-size: 1vw;
+  font-weight: 500;
+  line-height: 100%;
 }
