add dasboard/companies page, stats component and upd layout

--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -1,5 +1,6 @@
 .container {
-  position: fixed;
+  /* position: fixed; */
+  position: relative;
   width: 16.67em;
   height: 100vh;
   display: flex;
