--- a/src/app/(admin)/admin.module.css
+++ b/src/app/(admin)/admin.module.css
@@ -1,7 +1,9 @@
 .main {
   display: flex;
+  justify-content: space-between;
   background: var(--milk);
 }
 .children {
-  margin-left: 16.67em;
+  /* margin-left: 16.67em; */
+  width: 100%;
 }
