--- a/src/app/homepage.module.css
+++ b/src/app/homepage.module.css
@@ -11,6 +11,7 @@
   letter-spacing: 0.5em;
   font-size: 4em;
   text-transform: capitalize;
+  margin-bottom: 1em;
 }
 .title::after,
 .title::before {
