add sales section, animation on apperance

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
   --purple: #e9d5ff;
   --light-green: #d9f99d;
   --grey: #2d3948;
+  --greySecond: #f3f4f6;
   --green: #15803d;
   --greenBg: #dcfce7;
   --red: #b91c1c;
