--- a/src/app/(admin)/admin.module.css
+++ b/src/app/(admin)/admin.module.css
@@ -4,6 +4,6 @@
   background: var(--milk);
 }
 .children {
-  /* margin-left: 16.67em; */
-  width: 100%;
+  margin-left: 16.67em;
+  width: calc(100% - 16.67em);
 }
