--- a/src/components/RowHead/rowhead.module.css
+++ b/src/components/RowHead/rowhead.module.css
@@ -1,4 +1,5 @@
 .head {
+  width: 100%;
   display: flex;
   align-items: center;
   border: 0.1em solid rgb(209, 213, 219);
@@ -7,23 +8,24 @@
 .second,
 .third {
   padding: 0.5em 1.75em;
-  font-size: 0.833em;
+  font-size: 1em;
+
   font-weight: 400;
   line-height: 1.33em;
   text-align: center;
 }
 .first {
-  width: 50%;
+  width: 17.5em;
   color: var(--white);
   background-color: var(--blackBg);
 }
 .second {
-  width: 25%;
+  width: 7.22em;
   color: var(--blackBg);
   background-color: var(--purple);
 }
 .third {
-  width: 25%;
+  width: 7.22em;
   color: var(--blackBg);
   background-color: var(--light-green);
 }
@@ -31,13 +33,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: nowrap;
   gap: 0.5em;
   color: var(--blackBg);
   background-color: inherit;
-  font-size: 1em;
   font-weight: 400;
   line-height: 1.4em;
 }
 .head:nth-child(odd) {
   background: var(--greySecond);
+}
+.customWidth {
+  width: 15em;
 }
