--- a/src/components/Stats/stats.module.css
+++ b/src/components/Stats/stats.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
+  margin: 0 2.78em;
   gap: 1em;
 }
 .item {
