--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --light-green: #d9f99d;
   --grey: #2d3948;
   --greySecond: #f3f4f6;
+  --greyThird: #d1d5db;
   --green: #15803d;
   --greenBg: #dcfce7;
   --red: #b91c1c;
