add modal, formik, yup

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
   --white: white;
   --milk: #fafafa;
   --blackBg: #111827;
+  --backDropColor: rgba(17, 24, 39, 0.6);
   --purple: #e9d5ff;
   --light-green: #d9f99d;
   --grey: #2d3948;
