add single company page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --purple: #e9d5ff;
   --light-green: #d9f99d;
   --grey: #2d3948;
+  --greyDark: #d9d9d9;
   --greySecond: #f3f4f6;
   --greyThird: #d1d5db;
   --green: #15803d;
