--- a/src/app/(admin)/companies/companies.module.css
+++ b/src/app/(admin)/companies/companies.module.css
@@ -1,6 +1,6 @@
-.section {
-  /* position: relative; */
-}
+/* .section {
+  position: relative;
+} */
 .formContainer,
 .formSingleCompanyContainer {
   margin-bottom: 2em;
