--- a/src/app/(admin)/dashboard/dashboard.module.css
+++ b/src/app/(admin)/dashboard/dashboard.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
-  gap: 1.4em;
-  margin: 1.4em 2.78em;
+  gap: 1em;
+  justify-content: space-between;
+  margin: 1.4em 0.4em 2.78em;
 }
