--- a/src/app/homepage.module.css
+++ b/src/app/homepage.module.css
@@ -5,6 +5,8 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background: var(--blackBg);
+  z-index: -4;
 }
 .title {
   position: relative;
@@ -12,6 +14,7 @@
   font-size: 4em;
   text-transform: capitalize;
   margin-bottom: 1em;
+  color: var(--red);
 }
 .title::after,
 .title::before {
@@ -25,12 +28,12 @@
 .title::before {
   animation: glitch 2s both infinite;
   color: var(--green);
-  z-index: -1;
+  /* z-index: -1; */
 }
 .title::after {
   animation: glitch 2s reverse both infinite;
-  color: var(--red);
-  z-index: -2;
+  color: var(--white);
+  /* z-index: -2; */
 }
 .btn {
   margin-top: 0.5em;
@@ -54,16 +57,16 @@
     transform: translate(0);
   }
   20% {
-    transform: translate(-0.015em, 0.015em);
+    transform: translate(-0.025em, 0.025em);
   }
   40% {
-    transform: translate(-0.015em, -0.015em);
+    transform: translate(-0.025em, -0.025em);
   }
   60% {
-    transform: translate(0.015em, 0.015em);
+    transform: translate(0.025em, 0.025em);
   }
   80% {
-    transform: translate(0.015em, -0.015em);
+    transform: translate(0.025em, -0.025em);
   }
   100% {
     transform: translate(0);
