--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -9,5 +9,6 @@
   align-items: center;
   justify-content: center;
   background-color: var(--backDropColor);
+  z-index: 2;
   /* opacity: 0.6; */
 }
