--- a/src/components/Title/title.module.css
+++ b/src/components/Title/title.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 2em 2.78em;
   margin-bottom: 2em;
   border-bottom: 0.1em solid rgb(209, 213, 219);
