--- a/src/app/homepage.module.css
+++ b/src/app/homepage.module.css
@@ -8,33 +8,7 @@
   background: var(--blackBg);
   z-index: -4;
 }
-.title {
-  position: relative;
-  letter-spacing: 0.5em;
-  font-size: 4em;
-  text-transform: capitalize;
-  margin-bottom: 1em;
-  color: var(--red);
-}
-.title::after,
-.title::before {
-  content: attr(data-text);
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  opacity: 0.8;
-}
-.title::before {
-  animation: glitch 2s both infinite;
-  color: var(--green);
-  /* z-index: -1; */
-}
-.title::after {
-  animation: glitch 2s reverse both infinite;
-  color: var(--white);
-  /* z-index: -2; */
-}
+
 .btn {
   margin-top: 0.5em;
   padding: 1em;
@@ -51,24 +25,15 @@
   color: var(--blackBg);
   background-color: var(--light-green);
 }
-
-@keyframes glitch {
-  0% {
-    transform: translate(0);
-  }
-  20% {
-    transform: translate(-0.025em, 0.025em);
-  }
-  40% {
-    transform: translate(-0.025em, -0.025em);
-  }
-  60% {
-    transform: translate(0.025em, 0.025em);
-  }
-  80% {
-    transform: translate(0.025em, -0.025em);
-  }
-  100% {
-    transform: translate(0);
-  }
+.transition {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--light-green);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
 }
